--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-hello!! world
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<link rel="stylesheet" href="styles.css" />
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+	</head>
+	<body>
+		<div class="postcard">
+			<divs class="postcard-header">
+				<h1>My Postcard</h1>
+				<img
+					src="https://raw.githubusercontent.com/breatheco-de/exercise-postcard/e63a7916530cc850bd92aa1c2e19191837fb5c80/.learn/assets/4geeks.png"
+				/>
+			</divs>
+			<divs class="postcard-body">gi
+				<div class="body-left">
+					<p>Typesetting industry. Lorem Ipsum has been the industry's standard dummy essentially unchanged.</p>
+					<p>It was popularised in the 1960s with the traset sheets containing</p>
+				</div>
+				<div class="body-right">
+					<input type="text" placeholder="Nombre" />
+					<input type="text" placeholder="Email" />
+					<input type="text" placeholder="Comentarios" />
+				</div>
+			</divs>
+			<div class="postcard-footer">
+				<button>Send My Postcard</button>
+			</div>
+		</div>
+	</body>
+</html>
